k8s-infra/d-comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-srv
  labels:
    app: comments-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-srv
  template:
    metadata:
      name: comments-srv
      labels:
        app: comments-srv
    spec:
      containers:
        - name: comments-srv
          image: comments-srv:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
