k8s-infra/d-post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-clusterip-srv
  labels:
    app: posts-clusterip-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-clusterip-srv
  template:
    metadata:
      name: posts-clusterip-srv
      labels:
        app: posts-clusterip-srv
    spec:
      containers:
        - name: posts-clusterip-srv
          image: posts-clusterip-srv:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
