k8s-infra/d-query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-srv
  template:
    metadata:
      labels:
        app: query-srv
    spec:
      containers:
        - name: query-srv
          image: query-srv:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
